Added Device rotation operations